TestSuite/Scheduler/Correct/InheritedStartEnd.tjp
project test "Test" "$Id" 2000-01-01-0:00-GMT 2000-03-31-0:00-GMT {
	timezone "GMT"
}

task f1 "f1" {
	start 2000-01-01
  length 1d
}

task t1 "Task1" {
  start 2000-02-01

  task t2 "Task2" {
		task t3 "Task3" {
		  depends f1
		  length 1d
		}
	}
}

task f2 "f2" {
	end 2000-02-01
	length 1d
	scheduling alap
}

task t3 "Task3" {
  end 2000-01-15

	task t4 "Task4" {
		task t5 "Task5" {
		  precedes f2
		  length 1d
		}
	}
}

htmltaskreport "InheritedStartEnd.html" {
	columns name, start, end, daily
}

